better job handling deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_VERBOSE_MAKEFILE ON)
 
 set(CMAKE_CXX_STANDARD 17)
 
+set(CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/Modules)
+
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -11,6 +13,7 @@ endif()
 set(CMAKE_CXX_FLAGS "-Wall -Wextra")
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+
 
 set(CORE_SOURCE_FILES
         core/K2Tree.cpp
@@ -48,7 +51,6 @@ set(PROTO_MESSAGES
         proto/generated/request_msg.pb.cc
         proto/generated/response_msg.pb.cc
         proto/generated/radix_tree.pb.cc
-
         )
 
 set(PROTO_MESSAGES_PATH ${CMAKE_SOURCE_DIR}/proto/generated)
@@ -56,6 +58,24 @@ set(PROTO_MESSAGES_PATH ${CMAKE_SOURCE_DIR}/proto/generated)
 set(INCLUDES memory core network ${PROTO_MESSAGES_PATH} ${CMAKE_SOURCE_DIR}/gresults-caching)
 
 set(K2TREE_PATH ${CMAKE_SOURCE_DIR}/lib/c-k2tree-dyn)
+
+
+set(K2TREE_LIBFILE libk2tree_merged_noalloc.a)
+
+add_custom_command(OUTPUT ${K2TREE_LIBFILE}
+        COMMAND make
+        COMMAND cp bin/libk2tree_merged_noalloc.a .
+        WORKING_DIRECTORY ${K2TREE_PATH}
+        )
+add_custom_target(_k2tree_target ALL DEPENDS ${K2TREE_LIBFILE})
+add_library(_k2tree_merged_noalloc STATIC IMPORTED GLOBAL)
+add_dependencies(_k2tree_merged_noalloc _k2tree_target)
+set_target_properties(_k2tree_merged_noalloc
+        PROPERTIES
+        IMPORTED_LOCATION ${K2TREE_PATH}/libk2tree_merged_noalloc.a
+        INTERFACE_INCLUDE_DIRECTORIES ${K2TREE_LIB_LOCATION}/include
+        )
+message("k2tree loc: " ${K2TREE_PATH}/libk2tree_merged_noalloc.a)
 
 
 
@@ -66,7 +86,7 @@ set(INCLUDES_LIBS
         ${K2TREE_PATH}/lib/c-vector/include
         )
 
-set(LINK_LIBS ${K2TREE_PATH}/bin)
+set(LINK_LIBS ${K2TREE_PATH})
 
 include_directories(${INCLUDES} ${INCLUDES_LIBS})
 link_directories(${LINK_LIBS})
@@ -83,11 +103,22 @@ add_library(RDFCacheK2_GR STATIC ${GRAPH_RESULT_CACHING_FILE})
 
 add_library(ProtoMessages STATIC ${PROTO_MESSAGES})
 
+add_dependencies(RDFCacheK2 _k2tree_merged_noalloc)
 
 find_package(Protobuf REQUIRED)
 include_directories(${Protobuf_INCLUDE_DIRS})
 
+# include(3rdparty-libs.cmake)
 
+set(RAX_PATH plib/rax-31-may-2020-1927550)
+add_library(Rax ${RAX_PATH}/rax.c )
+include_directories(${RAX_PATH})
+
+find_package(LibXml2 REQUIRED)
+include_directories(${LibXml2_INCLUDE_DIRS})
+find_package(Raptor2 REQUIRED)
+include_directories(${RAPTOR2_INCLUDE_DIR})
+message("RAPTOR INCLUDES: " ${RAPTOR2_INCLUDE_DIR})
 
 
 #add_executable(main main.cpp )
@@ -104,6 +135,7 @@ set(BASE_LIBS
         )
 
 set(DEFAULT_LIBS
+        k2tree_merged_noalloc
         RDFCacheK2
         RDFCacheK2_Network
         k2tree_merged_noalloc
@@ -118,19 +150,14 @@ target_link_libraries(example1 RDFCacheK2_GR ${DEFAULT_LIBS} )
 # index by k2tree script
 
 
-set(RAPTOR_PATH lib/raptor2-2.0.15)
-set(LIBXML_PATH lib/libxml2-2.9.10)
-set(RAX_PATH plib/rax-31-may-2020-1927550)
-
-add_library(Rax ${RAX_PATH}/rax.c )
-
-link_directories(${RAPTOR_PATH}/src/.libs/ ${LIBXML_PATH}/.libs/)
-include_directories(${RAPTOR_PATH}/src ${LIBXML_PATH}/include ${RAX_PATH} scripts)
-
-
 add_executable(index_by_k2tree
         scripts/index_by_k2tree.cpp
         )
+
+if(NOT ${THIRD_PARTY_DEPS_SZ} EQUAL 0)
+    add_dependencies(index_by_k2tree ${THIRD_PARTY_DEPS})
+endif()
+
 
 set(INDEX_FILE_LIBS ${BASE_LIBS}
         raptor2
@@ -144,12 +171,6 @@ target_link_libraries(index_by_k2tree ${INDEX_FILE_LIBS})
 
 add_executable(radix_set_from_ntfile scripts/radix_set_from_ntfile.cpp)
 target_link_libraries(radix_set_from_ntfile ${INDEX_FILE_LIBS})
-
-
-
-
-
-
 
 
 
