--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,7 +228,8 @@ target_link_libraries(sd_from_fileset ${BASE_LIBS})
 
 
 add_executable(sd_from_fileset_readfull scripts/sd_from_fileset_readfull.cpp)
-target_link_libraries(sd_from_fileset_readfull ${BASE_LIBS})
+target_include_directories(sd_from_fileset_readfull PUBLIC ${LIB_CPPBASE64_PATH})
+target_link_libraries(sd_from_fileset_readfull ${BASE_LIBS} CppBase64)
 
 add_executable(print_sd scripts/print_sd.cpp)
 target_link_libraries(print_sd ${BASE_LIBS})
